nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-sonatype-nexus-service
spec:
  ports:
    - name: nexus-service
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: nxrm
  type: ClusterIP
