nexus/nexus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
spec:
  path: /
  to:
    name: nexus-sonatype-nexus-service
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8081
